# quicky-file-share

./: .gitignore  Cargo.toml  README.md  setup.sh
backend/: Cargo.toml  README.md
backend/src/: main.rs  meta.rs  upload.rs
frontend/: Cargo.toml  README.md  index.html  index.scss
frontend/src/: app.rs  main.rs
frontend/src/components/: button.rs  file.rs  file_not_found.rs  upload.rs  upload_drop_zone.rs  upload_field.rs  upload_file_li.rs
frontend/src/components/upload_input/: drop_zone.rs  field.rs  file_li.rs  input.rs
frontend/src/components/upload_tasks/: byob_stream.rs  task.rs  tasks.rs  upload.rs
frontend/src/pages/: download.rs  file.rs  home.rs  not_found.rs
shared/src/: lib.rs
