[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
bytes = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.8", features = ["v4"] }