[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-net = "0.2"
serde_json = "1.0"
web-sys = { version="0.3.63", features=["DragEvent", "DataTransfer", 'FileList'] }