[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
shared = { version = "0.1.0", path = "../shared" }
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
log = "0.4.6"
anyhow = "1.0"
reqwest = {version="0.11", features=["multipart", "stream", "json", "cookies"] }
serde_json = "1.0"
web-sys = { version="0.3.63", features=["DragEvent", "Blob", "ReadableStreamByobReader","DataTransfer", 'FileList', "ReadableStream", "ReadableWritablePair", "WritableStream"] }
wasm-streams = "0.3"
js-sys = "^0.3.47"
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "^0.4.20"
futures-util = { version = "0.3.21", features = ["io", "sink"] }
